Fix GiaoDienTraCuuKhuyenMai and GiaoDienTraCuuMonAn